--- a/src/index.css
+++ b/src/index.css
@@ -174,12 +174,12 @@ section {
 }
 
 .hero-section input[type="text"] {
-  width: 30%;
+  width: 50%;
   padding: 15px;
   font-size: 1.2rem;
   border: 2px solid #333;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Shadow for focus */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
   margin-bottom: 20px;
   transition: box-shadow 0.3s ease;
 }
